force-app/main/default/objects/Contact/fields/currency_changed__c.field-meta.xml
<CustomField>
    <fullName>currency_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>currency changed</label>
    <type>Checkbox</type>
</CustomField>