force-app/main/default/objects/Contact/fields/Individual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Individual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>