force-app/main/default/objects/Contact/fields/revenue__c.field-meta.xml
<CustomField>
    <fullName>revenue__c</fullName>
    <label>revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>